# OpenCL-Development

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/2DImageFilter/: 2DImageFilter.cpp  CMakeLists.txt  INSTALL-FreeImage-LINUX.md  INSTALL-FreeImage-WINDOWS.md
src/2DImageFilter/include/: Controller.hpp
src/2DImageFilter/kernel/: gaussian_filter.cl
src/2DImageFilter/src/: Controller.cpp
src/BufferSubBuffers/: BufferSubBuffers.cpp  CMakeLists.txt
src/BufferSubBuffers/kernel/: simple.cl
src/Convolution/: CMakeLists.txt  Convolution.cpp
src/Convolution/Kernels/: convolution.cl
src/Convolution/include/: InfoDevice.hpp  InfoPlatform.hpp
src/Convolution/kernel/: convolution.cl
src/Convolution/src/: InfoPlatform.cpp
src/HelloWorld/: CMakeLists.txt  HelloWorld.cl  HelloWorld.cpp
src/HelloWorldBinary/: CMakeLists.txt  HelloWorldBinary.cpp
src/PlatformContextDevices/: CMakeLists.txt  PlatformContextDevices.cpp
src/PlatformContextDevices/include/: ArrayType.hpp  InfoDevice.cpp  InfoDevice.hpp
src/RectangularBuffers/: CMakeLists.txt  RectangularBuffers.cpp
